test/Fail/NoIrrelevance4.agda
{-# OPTIONS --no-irrelevance #-}

f = let .x = _ in _
